| Bug #31618 | ndb_binlog_discover test failure | ||
|---|---|---|---|
| Submitted: | 15 Oct 2007 23:35 | Modified: | 6 Nov 2007 10:32 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: ClusterRep | Severity: | S3 (Non-critical) |
| Version: | CGE 6.2, 5.1-telco, 5.2 | OS: | Any |
| Assigned to: | Tomas Ulin | Target Version: | |
| Tags: | pbfail | ||
[15 Oct 2007 23:35]
Tomas Ulin
[15 Oct 2007 23:36]
Tomas Ulin
tables become writable to fast... the events are flushed by the binlog thread... 71015 19:10:34 [Note] NDB Binlog: DISCOVER TABLE Event: REPL$test/t1 071015 19:10:34 [Note] NDB Binlog: logging ./test/t1 (UPDATED,USE_WRITE) 071015 19:10:34 [Note] NDB Binlog: ndb tables writable 2007-10-15 19:09:01 [NdbApi] INFO -- Flushing incomplete GCI:s < 998/9 2007-10-15 19:10:34 [NdbApi] INFO -- Flushing incomplete GCI:s < 1024/10 071015 19:10:34 [ERROR] NDB Binlog: cluster has been restarted --initial or with older filesystem. ndb_latest_handled_binlog_epoch: 1025/0, while current epoch: 1024/10. RESET MASTER should be issued. Resetting ndb_latest_handled_binlog_epoch. 071015 19:10:34 [Note] NDB Binlog: starting log at epoch 1024/10 071015 19:10:34 [Note] NDB Binlog: Node: 1, subscribe from node 4, Subscriber bitmask 010 071015 19:10:34 [Note] NDB Binlog: Node: 2, subscribe from node 4, Subscriber bitmask 010 071015 19:10:34 [Note] NDB Binlog: Node: 1, subscribe from node 7, Subscriber bitmask 090 071015 19:10:34 [Note] NDB Binlog: Node: 2, subscribe from node 7, Subscriber bitmask 090 071015 19:10:34 [Note] NDB Binlog: drop table ./test/t1. 071015 19:19:20 [Note] NDB Binlog: DISCOVER TABLE Event: REPL$mysql/ndb_apply_status 071015 19:19:20 [Note] NDB Binlog: logging ./mysql/ndb_apply_status (UPDATED,USE_WRITE) 2007-10-15 19:17:46 [NdbApi] INFO -- Flushing incomplete GCI:s < 1056/9 2007-10-15 19:19:20 [NdbApi] INFO -- Flushing incomplete GCI:s < 1082/9 071015 19:19:20 [ERROR] NDB Binlog: cluster has been restarted --initial or with older filesystem. ndb_latest_handled_binlog_epoch: 1083/0, while current epoch: 1082/9. RESET MASTER should be issued. Resetting ndb_latest_handled_binlog_epoch. 071015 19:19:20 [Note] NDB Binlog: starting log at epoch 1082/9 071015 19:19:20 [Note] NDB Binlog: DISCOVER TABLE Event: REPL$test/t1 071015 19:19:20 [Note] NDB Binlog: logging ./test/t1 (UPDATED,USE_WRITE) 071015 19:19:20 [Note] NDB Binlog: ndb tables writable
[15 Oct 2007 23:40]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/35607 ChangeSet@1.2661, 2007-10-15 23:41:02+02:00, tomas@whalegate.ndb.mysql.com +5 -0 Bug #31618 ndb_binlog_discover test failure - add additional flag ndb_binlog_is_ready to indicate that binlog has flushed old events and is ready to receive new ones
[16 Oct 2007 11:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/35626 ChangeSet@1.2667, 2007-10-16 11:02:09+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug #31618 ndb_binlog_discover test failure - make sure all tables are inited before binlog thread may run
[16 Oct 2007 17:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/35666 ChangeSet@1.2668, 2007-10-16 17:04:15+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug #31618 ndb_binlog_discover test failure - ndb_latest_handled_binlog_epoch may not have been initialized when show binlog events is executed
[17 Oct 2007 14:00]
Jon Stephens
Documented bugfix in mysql-5.1.22-ndb-6.3.5 changelog; left in PP status.
[5 Nov 2007 14:53]
Bugs System
Pushed into 6.0.4-alpha
[6 Nov 2007 10:32]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Also documented in 6.0.4 changelog; closed.
