Bug #31618 ndb_binlog_discover test failure - make sure all tables are inited before binlog thread may run